<resources>
    <string name="google_client_id">275110851723-tp16v7h7vfic0clacpq9pccknn6ie0vh.apps.googleusercontent.com</string>
    <string name="google_client_secret">RxSRDiQ5EzggEMAYC1C1E6P-</string>
    <string name="facebook_app_id">307827609771860</string>
    <string name="fb_login_protocol_scheme">fb307827609771860</string>
    <string name="app_name">Gọi nước</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="retrieve_password">Lấy lại mật khẩu</string>
    <string name="retrieve_password_tutorial">Chúng tôi sẽ gửi một mã xác nhận vào Email đăng ký tài khoản của bạn. Nếu bạn không nhận được email trong hộp thư đến, hãy thử tìm kiếm ở mục Spam.</string>
    <string name="forget_password">Quên?</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="skip">Bỏ qua</string>
    <string name="tab_home">Trang chủ</string>
    <string name="tab_product">Đặt nước</string>
    <string name="tab_orders">Đơn hàng</string>
    <string name="tab_notif">Thông báo</string>
    <string name="tab_personal">Cá nhân</string>
    <string name="fullname">Họ và Tên</string>
    <string name="phone">SĐT</string>
    <string name="promote_code">Mã giới thiệu</string>
    <string name="wellcome">Chúng tôi luôn chọn những sản phẩm tốt nhất cho sức khỏe của bạn!</string>
    <string name="slogan">Luôn chọn những sản phẩm tốt nhất!</string>
    <string name="promote_point">Điểm thưởng:</string>
    <string name="empty_email">Vui lòng nhập Email</string>
    <string name="empty_password">Vui lòng nhập mật khẩu</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="user_invalid">Tài khoản không tồn tại</string>
    <string name="email_invalid">Email không hợp lệ</string>
    <string name="phone_invalid">Số điện thoại không hợp lệ</string>
    <string name="password_invalid">Mật khẩu không hợp lệ</string>
    <string name="password_wrong">Mật khẩu không đúng</string>
    <string name="guest">Guest</string>
    <string name="login_by_google">Đăng nhập với Google</string>
    <string name="login_by_facebook">Đăng nhập với facebook</string>
    <string name="order">Đặt hàng</string>
    <string name="name">Tên</string>
    <string name="city">Tỉnh/Thành phố</string>
    <string name="distict">Quận/Huyện</string>
    <string name="ward">Phường/Xã</string>
    <string name="save">Lưu</string>
    <string name="yes">Đồng ý</string>
    <string name="confirm">Xác nhận</string>
    <string name="tutorial_email_active_sent">Một mã xác nhận đã được gửi cho bạn qua Email. Vui lòng điền mã để kích hoạt tài khoản của bạn. Quá trình này có thể mất một vài phút.</string>
    <string name="tutorial_email_active">Tài khoản của bạn cần được kích hoạt để thực hiện giao dịch. Ấn nút Lấy mã để nhận mã kích hoạt qua Email:</string>
    <string name="active">Kích hoạt</string>
    <string name="order_details">Chi tiết đơn hàng</string>
    <string name="cancel_order">Hủy đơn hàng</string>
    <string name="order_confirmed">Nhận đơn</string>
    <string name="delivering">Giao hàng</string>
    <string name="delivered">Đã giao</string>
    <string name="order_time">Thời gian đặt hàng</string>
    <string name="expected_delivery_time">Dự kiến giao hàng</string>
    <string name="delivered_time">Hoàn thành giao hàng</string>
    <string name="product">Sản phẩm</string>
    <string name="delivery_climb">Giao hàng thang bộ (4000đ/bình)</string>
    <string name="total_payment">Tổng thanh toán:</string>
    <string name="delivery_address">Giao đến</string>
    <string name="payment_type">Hình thức thanh toán:</string>
    <string name="cash">Tiền mặt</string>
    <string name="coin">Điểm thưởng</string>
    <string name="bill">Hóa đơn</string>
    <string name="confirm_received">Đã nhận hàng</string>
    <string name="order_success">Đặt hàng thành công!</string>
    <string name="total_price">Tổng tiền</string>
    <string name="coupon">Mã giảm giá</string>
    <string name="order_history">Lịch sử đơn hàng</string>
    <string name="loadmore">Đang tải thêm...</string>
    <string name="view_details">Xem chi tiết</string>
    <string name="tutorial_register">Đăng ký tài khoản để theo dõi đơn hàng và nhận  nhiều ưu đãi hấp dẫn.</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="ref_code_tutorial">* Nhập mã giới thiệu từ bạn bè, người thân để nhận chiết khấu hấp dẫn khi đặt hàng</string>
    <string name="empty_name">Vui lòng nhập họ và tên của bạn.</string>
    <string name="password_tutorial">* Mật khẩu chứa ít nhất 6 ký tự, bao gồm cả chữ và số.</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="my_notif_channel_id">enjoy_water_channel</string>
    <string name="my_notif_channel_name">enjoy_water</string>
    <string name="my_notif_channel_description">enjoy_water</string>
    <string name="tutorial_submit_ref_code">Nhập mã giới thiệu từ bạn bè để được tặng ngay 5.000 điểm thưởng và chiết khấu 1% cho tất cả đơn hàng của bạn.</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="view_detail_underline"><u>Chi tiết</u></string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>
    <string name="birthday">Sinh nhật</string>
    <string name="phone_full">Số điện thoại</string>
    <string name="user_ref_code">Mã của bạn</string>
    <string name="change">Đổi</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="event_title">Chia sẻ và hướng dẫn bạn bè sử dụng app để nhận được điểm thưởng mãi mãi!</string>
    <string name="event_content">[1] Gửi link Chia sẻ ứng dụng ở dưới cho bạn bè.\n[2] Hướng dẫn bạn bè cài app và nhập Mã giới thiệu của bạn vào.\n[3] Hướng dẫn bạn bè đăng ký tài khoản và sử dụng.\n[4] Với mỗi đơn hàng của bạn bè hoàn tất thanh toán bạn sẽ được nhận điểm thưởng.\n[5] Sử dụng điểm thưởng để đặt hàng trên app.</string>
    <string name="share_now">Chia sẻ ngay</string>
    <string name="your_code">Lấy mã giới thiệu</string>
    <string name="my_bonus_coin"><u>Kho điểm của tôi</u></string>
    <string name="tutorial_1_title">ỨNG DỤNG GIAO NƯỚC THÔNG MINH 4.0</string>
    <string name="tutorial_1_desc">• Chỉ với 1 click, chúng tôi đã sẵn sàng phục vụ nhu cầu uống nước sạch của bạn!</string>
    <string name="tutorial_2_title">ĐẢM BẢO AN TOÀN TUYỆT ĐỐI CHO SỨC KHỎE CỦA BẠN</string>
    <string name="tutorial_2_desc">• Chúng tôi thẩm định và lựa chọn những sản phẩm tốt nhất cho sức khỏe.\n• Chúng tôi mang nước kiềm đến giúp cơ thể bạn trung hòa axit và ngăn ngừa ung thư.\n• Chúng tôi mua bảo hiểm cho từng sản phẩm bạn dùng</string>
    <string name="tutorial_3_title">TẶNG 10.000 ĐIỂM THƯỞNG/SẢN PHẨM CHO ĐƠN HÀNG ĐẦU TIÊN CỦA BẠN</string>
    <string name="tutorial_3_desc"></string>
    <string name="tutorial_4_title">TẶNG ĐIỂM THƯỞNG MÃI MÃI KHI GIỚI THIỆU APP CHO BẠN BÈ</string>
    <string name="tutorial_4_desc"></string>
    <string name="next">Tiếp</string>
    <string name="start">Bắt đầu</string>
    <string name="tutorial_order_rating">Bạn có hài lòng về đơn hàng này không? Xin vui lòng cho chúng tôi biết cảm nhận và đánh giá của bạn.</string>
</resources>
