<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activiy.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_60"
            android:src="@drawable/ic_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_marginLeft="@dimen/size_40"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginRight="@dimen/size_40"
            android:background="@drawable/border_blue_corner_5">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="@string/fullname"
                android:inputType="textCapWords"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/cursor_blue_1dp"
                android:textSize="@dimen/text_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_marginLeft="@dimen/size_40"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginRight="@dimen/size_40"
            android:background="@drawable/border_blue_corner_5">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/cursor_blue_1dp"
                android:textSize="@dimen/text_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_marginLeft="@dimen/size_40"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginRight="@dimen/size_40"
            android:background="@drawable/border_blue_corner_5">

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/cursor_blue_1dp"
                android:textSize="@dimen/text_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_marginLeft="@dimen/size_40"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginRight="@dimen/size_40"
            android:background="@drawable/border_blue_corner_5">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/cursor_blue_1dp"
                android:textSize="@dimen/text_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_marginLeft="@dimen/size_40"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginRight="@dimen/size_40"
            android:background="@drawable/border_blue_corner_5">

            <EditText
                android:id="@+id/edt_promote_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="@string/promote_code"
                android:inputType="textCapCharacters"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/cursor_blue_1dp"
                android:textSize="@dimen/text_15" />
        </RelativeLayout>

        <com.enjoywater.view.RippleView
            android:id="@+id/ripple_register"
            android:layout_width="@dimen/size_180"
            android:layout_height="@dimen/size_30"
            android:layout_marginTop="@dimen/size_25"
            android:background="@drawable/bg_green_corner_4"
            app:rv_alpha="0"
            app:rv_color="@android:color/transparent"
            app:rv_zoomScale="1.1">

            <com.enjoywater.view.TvSegoeuiSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </com.enjoywater.view.RippleView>
    </LinearLayout>
</RelativeLayout>