<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".activiy.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/v_center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_50"
        android:src="@drawable/ic_logo" />

    <View
        android:id="@+id/v_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_18"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="@dimen/size_40"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <com.enjoywater.view.TvSegoeuiRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_18" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_40"
            android:layout_marginTop="@dimen/size_5"
            android:layout_marginRight="@dimen/size_40">

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="@dimen/size_26"
                android:layout_height="@dimen/size_26"
                android:layout_marginRight="@dimen/size_10"
                android:src="@drawable/ic_username" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_25"
                android:layout_toRightOf="@id/iv_email"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/blue_cursor_1dp"
                android:textSize="@dimen/text_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0_5"
                android:layout_below="@id/edt_email"
                android:layout_toRightOf="@id/iv_email"
                android:background="@color/colorPrimary" />
        </RelativeLayout>

        <com.enjoywater.view.TvSegoeuiRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:includeFontPadding="false"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_18" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_40"
            android:layout_marginTop="@dimen/size_5"
            android:layout_marginRight="@dimen/size_40">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="@dimen/size_26"
                android:layout_height="@dimen/size_26"
                android:layout_marginRight="@dimen/size_10"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_25"
                android:layout_toRightOf="@id/iv_password"
                android:background="@null"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/blue_cursor_1dp"
                android:textSize="@dimen/text_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0_5"
                android:layout_below="@id/edt_password"
                android:layout_toRightOf="@id/iv_password"
                android:background="@color/colorPrimary" />
        </RelativeLayout>

        <com.enjoywater.view.RippleView
            android:id="@+id/ripple_retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15"
            android:padding="@dimen/size_5"
            app:rv_alpha="0"
            app:rv_color="@android:color/transparent"
            app:rv_zoomScale="1.1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_17"
                android:textStyle="bold|italic" />
        </com.enjoywater.view.RippleView>

        <com.enjoywater.view.RippleView
            android:id="@+id/ripple_login"
            android:layout_width="@dimen/size_180"
            android:layout_height="@dimen/size_30"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/bg_btn_blue_corner_15"
            app:rv_alpha="0"
            app:rv_color="@android:color/transparent"
            app:rv_zoomScale="1.1">

            <com.enjoywater.view.TvSegoeuiSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </com.enjoywater.view.RippleView>

        <com.enjoywater.view.RippleView
            android:id="@+id/ripple_register"
            android:layout_width="@dimen/size_180"
            android:layout_height="@dimen/size_30"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/bg_btn_green_corner_15"
            app:rv_alpha="0"
            app:rv_color="@android:color/transparent"
            app:rv_zoomScale="1.1">

            <com.enjoywater.view.TvSegoeuiSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </com.enjoywater.view.RippleView>

        <com.enjoywater.view.RippleView
            android:id="@+id/ripple_skip"
            android:layout_width="@dimen/size_180"
            android:layout_height="@dimen/size_30"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/bg_btn_orange_corner_15"
            app:rv_alpha="0"
            app:rv_color="@android:color/transparent"
            app:rv_zoomScale="1.1">

            <com.enjoywater.view.TvSegoeuiSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/skip"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </com.enjoywater.view.RippleView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_loading"
        android:background="@color/black_trans_50"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <com.enjoywater.view.ProgressWheel
            android:id="@+id/progress_loading"
            android:layout_width="@dimen/size_40"
            android:layout_height="@dimen/size_40"
            android:layout_centerInParent="true"
            app:matProg_barColor="@color/colorAccent"
            app:matProg_barWidth="@dimen/size_2_5" />
    </RelativeLayout>
</RelativeLayout>